MBS-11302 gradleTest convention leftovers (#1118)
* MBS-11302 add gradleTest performance scenario

explain maxParallelForks better

* MBS-11302 add to jvmArgs instead of replacing it; remove duplicates of gradle-test convention